Fix incorrect spacing of collaboration section on mobile (#54)

--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -80,7 +80,6 @@
   position: absolute;
   right: -200px;
   top: 0;
-  transform: scaleX(-1);
   width: 280px;
 }
 
@@ -862,10 +861,6 @@
   width: 200px;
 }
 
-.mobileSpacing {
-  margin-top: -80px;
-}
-
 @media screen and (max-width: 800px) {
   .hideMobile {
     display: none;
@@ -978,6 +973,9 @@
   .mobileOnly {
     display: flex !important;
   }
+  .mobileSpacing {
+    margin-top: -80px !important;
+  }
 
   .secondaryAnchor {
     max-height: 200px;
@@ -989,11 +987,11 @@
   }
 
   .hideMobile {
-    display: none;
+    display: none !important;
   }
 
   .hidePhone {
-    display: none;
+    display: none !important;
   }
 
   .mobile {
